# miniature-umbrella

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: cd.yml  ci.yml
app/: database.py  main.py  models.py  pyproject.toml  requirements.txt
app/tests/: test_endpoints.py
iac/: main.tf  variables.tf
iac/scripts/: startup-script.sh
